getURLsFromHTML function and tests

--- a/Internet/HTTP/webcrawlerhttp/package.json
+++ b/Internet/HTTP/webcrawlerhttp/package.json
@@ -4,13 +4,15 @@
   "description": "Project for the Learn HTTP course",
   "main": "main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node main.js",
-    "test": "jest"
+    "test": "jest",
+    "start": "node main.js"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "jest": "^29.7.0"
+  },
+  "dependencies": {
+    "jsdom": "^24.0.0"
   }
 }
